--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "vscode-office.editorLanguage": "ko_KR",
     "vscode-office.hideToolbar": false,
-   "markdown-pdf.convertOnSave": true 
+   "markdown-pdf.convertOnSave": true ,
+   "html.format.enable": true,
+   "html.format.indentInnerHtml": true
 }
