--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "vscode-office.hideToolbar": false,
    "markdown-pdf.convertOnSave": true ,
    "html.format.enable": true,
-   "html.format.indentInnerHtml": true
+   "html.format.indentInnerHtml": true,
+   "MWB.filepath": "/.vscode/smaickmall.mwb"
 }
