--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-    "vscode-office.editorLanguage": "ko_KR",
-    "vscode-office.hideToolbar": false,
-   "markdown-pdf.convertOnSave": true ,
-   "html.format.enable": true,
-   "html.format.indentInnerHtml": true,
-   "MWB.filepath": "/.vscode/smaickmall.mwb"
+  "vscode-office.editorLanguage": "ko_KR",
+  "vscode-office.hideToolbar": false,
+  "markdown-pdf.convertOnSave": true,
+  "html.format.enable": true,
+  "html.format.indentInnerHtml": true,
+  "MWB.filepath": "/.vscode/smaickmall.mwb",
+  "markdown.extension.tableFormatter.enabled": true
 }
